2010-09-24  Araki Ken  <arakiken@users.sf.net>

	* kik_utmp_sysv.c, gtk/INSTALL: Minor fixes

2010-09-23  Araki Ken  <arakiken@users.sf.net>

	* kik_pty_streams.c: '#if && defined(I_PUSH)' is added at ioctl( .. I_PUSH .. ).
	
	* kik_utmp_sysv.c (kik_utmp_new):
	  - setut(x)ent() is moved after kik_priv_restore_egid() from before it.
	    (putut(x)line() could fail without this fix.)
	    (SF Bug #3051467, Thanks to David Kolovratnik)
	  - kik_priv_change_egid(getgid()) is called not only if pututxline()
	    succeeds but also if it fails.
	  - endut(x)ent() is called after putut(x)line().
	  - ut.ut_session = getsid(0) is added.

	* gtk/INSTALL: Added

	* gtk/mlvte.h, mlvte-in.c, mlvte-ex.c, main.c: Removed

	* USE_IMLIB, USE_GDK_PIXBUF => USE_IMAGELIB

2010-09-22  Araki Ken  <arakiken@users.sf.net>

	* vte.c: vte_terminal_set_alternative_screen_scroll() function
	  (which is empty yet) is added.
	  (Thanks to Usama Akkad)

	* x_imagelib_none.c: cleanup

	* gtk/Makefile.in: '-lX11' is added to 'gmlterm-in' and 'gmlterm-ex'
	  targets. (Thanks to to Hicham Haouari)

	* xwindow.c:
	  Code related to Pseudo transparency (especially around ParentRelative
	  transparency) is cleaned up.
	  PropertyNotify of "_XSETROOT_ID" is supported.
	
2010-09-22  Araki Ken  <arakiken@users.sf.net>

	* Imlib support is dropped.
	  x_imagelib_imlib.c and x_imagelib_imlib2.c: Removed
	  configure.in and configure: 'imlib' is removed from value of
	    --with-imagelib option. (To tell the truth, 'imlib' is still
	    possible to specify as a value of --with-imagelib option if
	    x_imagelib_imlib.c file is revived.)
	  README, README.ja, mlterm.1, mlterm.spec: Updated

	* gtk-1.x support is dropped.
	  mc_font.c, gtkxlfdsel.c, tool/mlconfig/main.c mlterm-menu.c:
	    Anything related to gtk-1.x is removed.
	  configure.in: gtk-1.x is not supported.
	  README, README.ja, mlterm.1: Updated
	
2010-09-20  Araki Ken  <arakiken@users.sf.net>

	* vtetypebuitins.c: Added

	* vte.c: